se agregó el territorio

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,9 +1,12 @@
 <html>
     <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <head>
         <title>El título del post></title>
+        <link rel="stylesheet" href="css/estilos.css" />
         </head>
         <body>
-            <h1>Aqui vamos a hacer un blog post</h1>
-            <p>Y este es el parrafo de incio</p>
+            <h1>Aquí vamos a hacer un blog post</h1>
+            <p>Y este es el párrafo de incio</p>
         </body>
 </html>        
