Se le agrego la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="container">
-            
+            <div id="cabecera"></div>
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
