--- a/blogpost.html
+++ b/blogpost.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera"></div>
-                Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+            <div id="cabecera">
+                Ultrablog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
