--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,8 @@
                 <p>Recuerda que ser chingón es una decisión</p>
                 <p>Suscribete y dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi
         </div>
     </body>
 </html>
