--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,8 @@
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas.</p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
-                <p><img src="imagenes/coquito.jpeg" width= "100%" /></p>
+                <a href=""https://ibb.co/1Jbz1HS"></a>
+                <p><img src="https://i.ibb.co/DgLrh3q/coquito.jpg" width= "100%" /></p>
                 <p>Suscr&iacute;bete y dale like</p>
             </div>
             <div id="footer">
